<resources>
    <string name="app_name">大休排班</string>
    <string name="about_title">关于</string>
    <string name="about_app_name">大休排班 · 运行值助手</string>
    <string name="author_text">作者：宇宙万空</string>
    <string name="contact_text">项目地址：https://github.com/yu-zhou-wan-kong/schedule-tool-pro</string>
    <string name="description_text">📅 基于五班三倒排班规则，支持节假日显示。</string>
    <string name="source_text">节假日数据来源：timor.tech 节假日 API</string>
    <string name="widget_title">小组件</string>
    <string name="widget_back">返回</string>
    <string name="about_app_intro">这是一款专为五班三倒工作制设计的排班日历应用。
        依赖个人维护，每年更新节假日数据。
        主要是想做一个简单、没有广告的排班表应用。后续也许会更新更多功能。</string>
    <string name="email_text">邮箱：zhang_yuzhe@foxmail.com</string>
    <string name="about_version">版本 %s</string>
    <string name="about_oss_title">开源许可</string>
    <string name="about_oss_content">本应用使用了以下开源库：\n\n- AppCompat (Apache 2.0)\n- Material Components (Apache 2.0)\n- PhotoView (Apache 2.0)\n- AndroidX Core (Apache 2.0)</string>
</resources>